# CenDB

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy-docs.yml
bindings/python/: benchmark.py  cendb.py  stress_bench.py  test_new_features.py
bindings/vscode/: cenql.tmLanguage.json
docs/: architecture.md  benchmarks.md  bindings_guide.md  buffer-pool.md  cenql.md  ffi.md  getting-started.md  indexing.md  known-limitations.md  mvcc.md  prod_readiness.md  projections.md  security.md  storage.md  v1.0.0-release-notes.md
source/: Cargo.toml
source/crates/cendb/: Cargo.toml
source/crates/cendb-buffer/: Cargo.toml
source/crates/cendb-buffer/src/: frame.rs  lib.rs  lru.rs  mmap.rs  pool.rs
source/crates/cendb-cas/: Cargo.toml
source/crates/cendb-cas/src/: blob.rs  hash.rs  lib.rs
source/crates/cendb-cenql/: Cargo.toml
source/crates/cendb-cenql/src/: ast.rs  lexer.rs  lib.rs  parser.rs
source/crates/cendb-chaos/: Cargo.toml
source/crates/cendb-chaos/src/: controller.rs  crash_simulator.rs  disk_crash_harness.rs  fuzz.rs  lib.rs  vfs.rs
source/crates/cendb-core/: Cargo.toml
source/crates/cendb-core/src/: lib.rs
source/crates/cendb-executor/: Cargo.toml
source/crates/cendb-executor/src/: join.rs  lib.rs  morsel.rs  subquery.rs  vector.rs
source/crates/cendb-export/: Cargo.toml
source/crates/cendb-export/src/: arrow.rs  csv_export.rs  json.rs  lib.rs  parquet.rs
source/crates/cendb-ffi/: Cargo.toml
source/crates/cendb-ffi/src/: lib.rs
source/crates/cendb-ffi/tests/: fuzz_boundary.rs  stress.rs
source/crates/cendb-index/: Cargo.toml
source/crates/cendb-index/src/: art.rs  lib.rs
source/crates/cendb-ingest/: Cargo.toml
source/crates/cendb-ingest/src/: csv.rs  lib.rs  type_inference.rs  virtual_table.rs
source/crates/cendb-jit/: Cargo.toml
source/crates/cendb-jit/src/: lib.rs
source/crates/cendb-net/: Cargo.toml
source/crates/cendb-net/src/: io_uring.rs  lib.rs
source/crates/cendb-optimizer/: Cargo.toml
source/crates/cendb-optimizer/src/: cost.rs  lib.rs  plan.rs  stats.rs
source/crates/cendb-pitr/: Cargo.toml
source/crates/cendb-pitr/src/: lib.rs
source/crates/cendb-projection/: Cargo.toml
source/crates/cendb-projection/src/: document.rs  graph.rs  kv.rs  lib.rs  relational.rs  timeseries.rs
source/crates/cendb-rdf/: Cargo.toml
source/crates/cendb-rdf/src/: lib.rs  serialize.rs  sparql.rs
source/crates/cendb-replication/: Cargo.toml
source/crates/cendb-replication/src/: lib.rs  tcp_transport.rs  wal_shipping.rs
source/crates/cendb-search/: Cargo.toml
source/crates/cendb-search/src/: bm25.rs  fts.rs  fuzzy.rs  lib.rs  secondary.rs  snippet.rs  stemmer.rs  tokenizer.rs
source/crates/cendb-security/: Cargo.toml
source/crates/cendb-security/src/: audit.rs  auth.rs  field_encryption.rs  kms.rs  lib.rs  masking.rs  merkle.rs  rbac.rs  session_store.rs  tde.rs
source/crates/cendb-spatial/: Cargo.toml
source/crates/cendb-spatial/src/: crs.rs  geohash.rs  geometry.rs  lib.rs  predicates.rs  rtree.rs  serialize.rs
source/crates/cendb-storage/: Cargo.toml
source/crates/cendb-storage/src/: encoding.rs  header.rs  lib.rs  pax.rs  segment.rs  simd_bits.rs  zerocopy.rs
source/crates/cendb-system/: Cargo.toml
source/crates/cendb-system/src/: backup.rs  catalog.rs  lib.rs
source/crates/cendb-tx/: Cargo.toml
source/crates/cendb-tx/src/: concurrent_stress.rs  concurrent_tm.rs  fuzz_extended.rs  lib.rs  mvcc.rs  wal.rs
source/crates/cendb-vector/: Cargo.toml
source/crates/cendb-vector/src/: lib.rs
source/crates/cendb/src/: jit_integration.rs  lib.rs  optimizer_integration.rs
source/crates/cendb/tests/: benchmarks.rs  chaos_tests.rs  comprehensive.rs  phase2_compression.rs  phase3_latency.rs  real_world_bench.rs  verification.rs
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/docs/: architecture.md  benchmarks.md  buffer-pool.md  cenql.md  compression.md  ffi.md  getting-started.md  indexing.md  introduction.md  known-limitations.md  mvcc.md  projections.md  real-world-benchmarks.md  recovery.md  replication.md  security.md  storage.md
website/src/css/: custom.css
