[package]
name = "cendb-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CenDB buffer pool: user-space frames, LRU-K eviction, pinned-page guards"

[features]
default = []
# Enable mmap-backed read-only page source for tiny, read-mostly KV
# deployments where binary minimalism trumps control. See §3.1 of the spec.
mmap = ["dep:memmap2"]

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-storage = { path = "../cendb-storage" }
memmap2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
