[package]
name = "cendb-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CenDB vectorized execution engine: SIMD-accelerated filters, morsel-driven push execution"

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-cenql = { path = "../cendb-cenql" }
cendb-storage = { path = "../cendb-storage" }
