[package]
name = "cendb-export"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-storage = { path = "../cendb-storage" }
cendb-projection = { path = "../cendb-projection" }
arrow = "59.0.0"
parquet = "59.0.0"
bytes = "1.12.0"
