[package]
name = "cendb-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CenDB C-ABI foreign function interface"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-storage = { path = "../cendb-storage" }
cendb-buffer = { path = "../cendb-buffer" }
cendb-projection = { path = "../cendb-projection" }

[dev-dependencies]
cendb-vector = { path = "../cendb-vector" }
