[package]
name = "cendb-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-executor = { path = "../cendb-executor" }
cranelift-codegen = "0.106"
cranelift-frontend = "0.106"
cranelift-module = "0.106"
cranelift-jit = "0.106"
cranelift-native = "0.106"
