[package]
name = "cendb-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cendb-core = { path = "../cendb-core" }
cendb-storage = { path = "../cendb-storage" }
blake3.workspace = true
chacha20poly1305 = "0.11.0"
argon2 = "0.5.3"
rand = "0.10.1"
